Bug 165833 - title label display CJK characters incorrectly in non-utf8 locale system
Summary: title label display CJK characters incorrectly in non-utf8 locale system
Status: RESOLVED FIXED
Alias: None
Product: dragonplayer
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dragon Player Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-06 06:43 UTC by nihui
Modified: 2008-07-06 10:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
convert titlelabel's string encoding corretly (994 bytes, patch)
2008-07-06 06:45 UTC, nihui
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nihui 2008-07-06 06:43:02 UTC
Version:           2.0 (using 4.00.85 (KDE 4.0.85 (KDE 4.1 >= 20080703), Magic Linux 2.1)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24.4-smp

Title label, which is at the bottom of the dragonplayer window, shows all CJK characters as question marks in non-utf8 locale system.

for example,"02.点燃激情 传递梦想" will become "02.???? ????".
while, "02.One World,One Dream" is correctly displayed.

To fix this small issus, I have created a patch.
After I applyed this patch, these CJK characters could be shown well now  ;)


nihui
Comment 1 nihui 2008-07-06 06:45:07 UTC
Created attachment 25870 [details]
convert titlelabel's string encoding corretly

patch.
convert titlelabel's string encoding corretly
Comment 2 David Edmundson 2008-07-06 10:46:45 UTC
SVN commit 828616 by davidedmundson:

BUG: 165833

Thanks to Nihui



 M  +1 -0      playDialog.cpp  
 M  +3 -1      theStream.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=828616