BUG: 165833

Thanks to Nihui


svn path=/trunk/KDE/kdemultimedia/dragonplayer/; revision=828616